@@ -3,7 +3,6 @@ package uk.gov.justice.probation.courtcaseservice.controller;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpHeaders;
@@ -25,7 +24,6 @@ import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.time.Month;
 import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.Collections;
 import java.util.List;
@@ -56,7 +54,6 @@ class CourtCaseControllerTest {
     private static final LocalDate DATE = LocalDate.of(2020, 2, 24);
     private static final LocalDateTime CREATED_AFTER = LocalDateTime.of(2020, 2, 23, 0, 0);
     private static final LocalDateTime CREATED_BEFORE = LocalDateTime.of(2020, 3, 23, 0, 0);
-    private final LocalDateTime now = LocalDateTime.now();
     @Mock
     private WebRequest webRequest;
     @Mock
@@ -65,29 +62,26 @@ class CourtCaseControllerTest {
     private CourtCaseRequest courtCaseUpdate;
     @Mock
     private OffenderMatchService offenderMatchService;
-    @InjectMocks
     private CourtCaseController courtCaseController;
     private final CourtCaseEntity courtCaseEntity = CourtCaseEntity.builder()
-        .caseNo(CASE_NO)
-        .courtCode(COURT_CODE)
-        .caseId(CASE_ID)
-        .sourceType(COMMON_PLATFORM)
-        .sessionStartTime(now)
-        .hearings(Collections.emptyList())
-        .defendants(Collections.singletonList(
-                DefendantEntity.builder()
-                        .defendantId(DEFENDANT_ID)
-                        .build()
-        ))
+            .caseNo(CASE_NO)
+            .caseId(CASE_ID)
+            .sourceType(COMMON_PLATFORM)
+            .hearings(Collections.singletonList(EntityHelper.aHearingEntity()
+                    .withCourtCode(COURT_CODE)))
+            .defendants(Collections.singletonList(
+                    DefendantEntity.builder()
+                            .defendantId(DEFENDANT_ID)
+                            .build()
+            ))
 
-        .build();
+            .build();
 
-    private CourtSession session;
+    private final CourtSession session = CourtSession.MORNING;
 
     @BeforeEach
-    void beforeEach() {
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("a");
-        session = formatter.format(now).equalsIgnoreCase("am") ? CourtSession.MORNING : CourtSession.AFTERNOON;
+    public void setUp() {
+        courtCaseController = new CourtCaseController(courtCaseService, offenderMatchService, true);
     }
 
     @Test
@@ -154,8 +148,14 @@ class CourtCaseControllerTest {
         var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
 
+        final var courtCaseEntity = this.courtCaseEntity.withDefendants(List.of(aDefendantEntity()))
+                .withHearings(Collections.singletonList(EntityHelper.aHearingEntity()
+                        .withHearingDay(DATE)
+                        .withHearingTime(LocalTime.of(9,0))
+                        .withCourtCode(COURT_CODE)
+                ));
         when(courtCaseService.filterCases(COURT_CODE, DATE, CREATED_AFTER, CREATED_BEFORE))
-            .thenReturn(Collections.singletonList(courtCaseEntity.withDefendants(List.of(aDefendantEntity()))));
+                .thenReturn(Collections.singletonList(courtCaseEntity));
         var responseEntity = courtCaseController.getCaseList(COURT_CODE, DATE, CREATED_AFTER, CREATED_BEFORE, webRequest);
 
         assertThat(responseEntity.getBody().getCases()).hasSize(1);
@@ -169,12 +169,14 @@ class CourtCaseControllerTest {
         var defendantEntity1 = EntityHelper.aDefendantEntity();
         var defendantEntity2 = EntityHelper.aDefendantEntity(NamePropertiesEntity.builder().title("HRH").forename1("Catherine").forename2("The").surname("GREAT").build());
         var courtCaseEntity = CourtCaseEntity.builder()
-            .caseNo(CASE_NO)
-            .courtCode(COURT_CODE)
-            .sourceType(COMMON_PLATFORM)
-            .sessionStartTime(now)
-            .defendants(List.of(defendantEntity1, defendantEntity2))
-            .build();
+                .caseNo(CASE_NO)
+                .sourceType(COMMON_PLATFORM)
+                .defendants(List.of(defendantEntity1, defendantEntity2))
+                .hearings(Collections.singletonList(EntityHelper.aHearingEntity()
+                        .withCourtCode(COURT_CODE)
+                        .withHearingDay(DATE)
+                        .withHearingTime(LocalTime.of(9,0))))
+                .build();
 
         var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
@@ -197,16 +199,41 @@ class CourtCaseControllerTest {
         final var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
 
-        final var controller = new CourtCaseController(courtCaseService, offenderMatchService);
+        final var controller = new CourtCaseController(courtCaseService, offenderMatchService, true);
 
         final var mornSession = LocalDateTime.of(DATE, LocalTime.of(9, 30));
         final var aftSession = LocalDateTime.of(DATE, LocalTime.of(14, 0));
 
-        final var entity1 = buildCourtCaseEntity("Mr Nicholas CAGE", mornSession, "1");
-        final var entity2 = buildCourtCaseEntity("Mr Christopher PLUMMER", mornSession, "1");
-        final var entity3 = buildCourtCaseEntity("Mr Darren ARONOFSKY", aftSession, "1");
-        final var entity4 = buildCourtCaseEntity("Mrs Minnie DRIVER", mornSession, "3");
-        final var entity5 = buildCourtCaseEntity("Mrs Juliette BINOCHE", aftSession, "3");
+        final var nicCage = NamePropertiesEntity.builder()
+                .title("Mr")
+                .forename1("Nicholas")
+                .surname("Cage")
+                .build();
+        final var entity1 = buildCourtCaseEntity(nicCage, mornSession, "1");
+        final var chrisPlummer = NamePropertiesEntity.builder()
+                .title("Mr")
+                .forename1("Christopher")
+                .surname("PLUMMER")
+                .build();
+        final var entity2 = buildCourtCaseEntity(chrisPlummer, mornSession, "1");
+        final var dazAronofsky = NamePropertiesEntity.builder()
+                .title("Mr")
+                .forename1("Darren")
+                .surname("ARONOFSKY")
+                .build();
+        final var entity3 = buildCourtCaseEntity(dazAronofsky, aftSession, "1");
+        final var minnieDriver = NamePropertiesEntity.builder()
+                .title("Mrs")
+                .forename1("Minnie")
+                .surname("DRIVER")
+                .build();
+        final var entity4 = buildCourtCaseEntity(minnieDriver, mornSession, "3");
+        final var julesBinoche = NamePropertiesEntity.builder()
+                .title("Mr")
+                .forename1("Juliette")
+                .surname("BINOCHE")
+                .build();
+        final var entity5 = buildCourtCaseEntity(julesBinoche, aftSession, "3");
 
         // Add in reverse order
         final var createdAfter = LocalDateTime.now().minus(1, ChronoUnit.DAYS);
@@ -216,11 +243,11 @@ class CourtCaseControllerTest {
         final var cases = responseEntity.getBody().getCases();
         assertThat(cases).hasSize(5);
 
-        assertPosition(0, cases, "1", "Mr Nicholas CAGE", mornSession);
-        assertPosition(1, cases, "1", "Mr Christopher PLUMMER", mornSession);
-        assertPosition(2, cases, "1", "Mr Darren ARONOFSKY", aftSession);
-        assertPosition(3, cases, "3", "Mrs Minnie DRIVER", mornSession);
-        assertPosition(4, cases, "3", "Mrs Juliette BINOCHE", aftSession);
+        assertPosition(0, cases, "1", nicCage, mornSession);
+        assertPosition(1, cases, "1", chrisPlummer, mornSession);
+        assertPosition(2, cases, "1", dazAronofsky, aftSession);
+        assertPosition(3, cases, "3", minnieDriver, mornSession);
+        assertPosition(4, cases, "3", julesBinoche, aftSession);
         assertThat(responseEntity.getHeaders().getFirst(HttpHeaders.LAST_MODIFIED)).isEqualTo("Wed, 21 Oct 2015 07:28:00 GMT");
     }
 
@@ -228,7 +255,7 @@ class CourtCaseControllerTest {
     void whenCreatedAfterIsNull_thenDefaultToTodayMinus8Days() {
         final var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
-        final var controller = new CourtCaseController(courtCaseService, offenderMatchService);
+        final var controller = new CourtCaseController(courtCaseService, offenderMatchService, true);
         final LocalDateTime createdAfter = LocalDateTime.of(DATE, LocalTime.MIDNIGHT).minusDays(8);
         controller.getCaseList(COURT_CODE, DATE, null, CREATED_BEFORE, webRequest);
 
@@ -239,7 +266,7 @@ class CourtCaseControllerTest {
     void whenCreatedBeforeIsNull_thenDefaultToMaxDate() {
         final var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
-        final var controller = new CourtCaseController(courtCaseService, offenderMatchService);
+        final var controller = new CourtCaseController(courtCaseService, offenderMatchService, true);
         final LocalDateTime createdBefore = LocalDateTime.of(294276, 12, 31, 23, 59);
         controller.getCaseList(COURT_CODE, DATE, CREATED_AFTER, null, webRequest);
 
@@ -250,7 +277,7 @@ class CourtCaseControllerTest {
     void whenListIsNotModified_thenReturn() {
         final var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
-        final var controller = new CourtCaseController(courtCaseService, offenderMatchService);
+        final var controller = new CourtCaseController(courtCaseService, offenderMatchService, true);
         when(webRequest.checkNotModified(lastModified.get().toInstant(ZoneOffset.UTC).toEpochMilli())).thenReturn(true);
 
         var responseEntity = controller.getCaseList(COURT_CODE, DATE, CREATED_AFTER, null, webRequest);
@@ -263,7 +290,7 @@ class CourtCaseControllerTest {
     void whenListHasNeverBeenModified_thenReturnNeverModifiedDate() {
         when(courtCaseService.filterCasesLastModified(COURT_CODE, DATE)).thenReturn(Optional.empty());
         when(webRequest.checkNotModified(any(Long.class))).thenReturn(false);
-        final var controller = new CourtCaseController(courtCaseService, offenderMatchService);
+        final var controller = new CourtCaseController(courtCaseService, offenderMatchService, true);
 
         var responseEntity = controller.getCaseList(COURT_CODE, DATE, CREATED_AFTER, null, webRequest);
 
@@ -277,7 +304,7 @@ class CourtCaseControllerTest {
         when(courtCaseService.createUpdateCaseForSingleDefendantId(CASE_ID, DEFENDANT_ID, courtCaseEntity)).thenReturn(Mono.just(courtCaseEntity));
         when(offenderMatchService.getMatchCountByCaseIdAndDefendant(CASE_ID, DEFENDANT_ID)).thenReturn(Optional.of(3));
 
-        var courtCase = courtCaseController.updateCourtCaseByDefendantId(CASE_ID, DEFENDANT_ID, courtCaseUpdate). block();
+        var courtCase = courtCaseController.updateCourtCaseByDefendantId(CASE_ID, DEFENDANT_ID, courtCaseUpdate).block();
 
         assertCourtCase(courtCase, null, 3);
         verify(courtCaseService).createUpdateCaseForSingleDefendantId(CASE_ID, DEFENDANT_ID, courtCaseEntity);
@@ -291,7 +318,7 @@ class CourtCaseControllerTest {
         when(courtCaseRequest.asCourtCaseEntity()).thenReturn(courtCaseEntity);
         when(courtCaseService.createCase(CASE_ID, courtCaseEntity)).thenReturn(Mono.just(courtCaseEntity));
 
-        var courtCase = courtCaseController.updateCourtCaseId(CASE_ID, courtCaseRequest). block();
+        var courtCase = courtCaseController.updateCourtCaseId(CASE_ID, courtCaseRequest).block();
 
         assertThat(courtCase).isSameAs(courtCaseRequest);
         verify(courtCaseRequest).asCourtCaseEntity();
@@ -299,34 +326,25 @@ class CourtCaseControllerTest {
         verifyNoMoreInteractions(courtCaseService, offenderMatchService);
     }
 
-    private void assertPosition(int position, List<CourtCaseResponse> cases, String courtRoom, String defendantName, LocalDateTime sessionTime) {
+    private void assertPosition(int position, List<CourtCaseResponse> cases, String courtRoom, NamePropertiesEntity defendantName, LocalDateTime sessionTime) {
         assertThat(cases.get(position).getCourtRoom()).isEqualTo(courtRoom);
-        assertThat(cases.get(position).getDefendantName()).isEqualTo(defendantName);
+        assertThat(cases.get(position).getName()).isEqualTo(defendantName);
         assertThat(cases.get(position).getSessionStartTime()).isEqualTo(sessionTime);
     }
 
     private void assertCourtCase(CourtCaseResponse courtCase, String caseNo, int possibleMatchCount) {
-        assertCourtCase(courtCase, caseNo, possibleMatchCount, COMMON_PLATFORM.name());
-    }
-
-    private void assertCourtCase(CourtCaseResponse courtCase, String caseNo, int possibleMatchCount, String source) {
         assertThat(courtCase.getCourtCode()).isEqualTo(COURT_CODE);
         assertThat(courtCase.getCaseNo()).isEqualTo(caseNo);
         assertThat(courtCase.getSessionStartTime()).isNotNull();
         assertThat(courtCase.getSession()).isSameAs(session);
-        assertThat(courtCase.getSource()).isEqualTo(source);
+        assertThat(courtCase.getSource()).isEqualTo(COMMON_PLATFORM.name());
         assertThat(courtCase.getNumberOfPossibleMatches()).isEqualTo(possibleMatchCount);
     }
 
-    private CourtCaseEntity buildCourtCaseEntity(String name, LocalDateTime sessionStartTime, String courtRoom) {
-
-        // TODO - we have to build like this because the sorting relies on the fields in CourtCaseEntity
+    private CourtCaseEntity buildCourtCaseEntity(NamePropertiesEntity name, LocalDateTime sessionStartTime, String courtRoom) {
         return aCourtCaseEntity(UUID.randomUUID().toString())
-            .withCourtRoom(courtRoom)
-            .withDefendantName(name)
-            .withSessionStartTime(sessionStartTime)
-            .withDefendants(List.of(aDefendantEntity(UUID.randomUUID().toString()).withDefendantName(name)))
-            .withHearings(List.of(aHearingEntity(sessionStartTime).withCourtRoom(courtRoom)));
+                .withDefendants(List.of(aDefendantEntity(UUID.randomUUID().toString()).withName(name)))
+                .withHearings(List.of(aHearingEntity(sessionStartTime).withCourtRoom(courtRoom)));
 
     }
 }
